objects/CN_Chef_UT__c.object
<CustomObject>
    <fields>
        <fullName>CN_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Working_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Working Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Year_Month__c</fullName>
        <formula>CN_Year__c &amp; RIGHT(&apos;0&apos; &amp; CN_Month__c, 2)</formula>
        <label>Year &amp;  Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Chef UT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2021</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <filters>
            <field>CN_Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>2021</label>
    </listViews>
    <listViews>
        <fullName>X2022</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <filters>
            <field>CN_Year__c</field>
            <operation>equals</operation>
            <value>2022</value>
        </filters>
        <label>2022</label>
    </listViews>
    <listViews>
        <fullName>X2023</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <filters>
            <field>CN_Year__c</field>
            <operation>equals</operation>
            <value>2023</value>
        </filters>
        <label>2023</label>
    </listViews>
    <listViews>
        <fullName>X2024</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <filters>
            <field>CN_Year__c</field>
            <operation>equals</operation>
            <value>2023</value>
        </filters>
        <label>2024</label>
    </listViews>
    <listViews>
        <fullName>X2025</fullName>
        <columns>NAME</columns>
        <columns>CN_Year_Month__c</columns>
        <columns>CN_Year__c</columns>
        <columns>CN_Month__c</columns>
        <columns>CN_Working_Days__c</columns>
        <columns>CN_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Chef_UT__c.CN_Chef_UT</value>
        </filters>
        <filters>
            <field>CN_Year__c</field>
            <operation>equals</operation>
            <value>2025</value>
        </filters>
        <label>2025</label>
    </listViews>
    <nameField>
        <displayFormat>UT{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chef UT</pluralLabel>
    <recordTypes>
        <fullName>CN_Chef_UT</fullName>
        <active>true</active>
        <label>CN Chef UT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>